-- Generated by Mocodo 4.2.11

CREATE TABLE ASSOCIATE (
  PRIMARY KEY (id_category, id_recipe),
  id_category VARCHAR(42) NOT NULL,
  id_recipe   VARCHAR(42) NOT NULL
);

CREATE TABLE CATEGORY (
  PRIMARY KEY (id_category),
  id_category VARCHAR(42) NOT NULL,
  name        VARCHAR(42)
);

CREATE TABLE COMMENT (
  PRIMARY KEY (id_comment),
  id_comment   VARCHAR(42) NOT NULL,
  content      VARCHAR(42),
  date_comment VARCHAR(42)
);

CREATE TABLE CREATE (
  PRIMARY KEY (id_recipe, id_user),
  id_recipe VARCHAR(42) NOT NULL,
  id_user   VARCHAR(42) NOT NULL
);

CREATE TABLE GIVE (
  PRIMARY KEY (id_score, id_user),
  id_score VARCHAR(42) NOT NULL,
  id_user  VARCHAR(42) NOT NULL
);

CREATE TABLE HAVE (
  PRIMARY KEY (id_role, id_user),
  id_role VARCHAR(42) NOT NULL,
  id_user VARCHAR(42) NOT NULL
);

CREATE TABLE LEAVE (
  PRIMARY KEY (id_comment, id_user),
  id_comment VARCHAR(42) NOT NULL,
  id_user    VARCHAR(42) NOT NULL
);

CREATE TABLE RECIPE (
  PRIMARY KEY (id_recipe),
  id_recipe    VARCHAR(42) NOT NULL,
  title        VARCHAR(42),
  description  VARCHAR(42),
  anecdote     VARCHAR(42),
  ingredients  VARCHAR(42),
  instructions VARCHAR(42),
  source       VARCHAR(42),
  date_added   VARCHAR(42),
  id_category  VARCHAR(42)
);

CREATE TABLE ROLE (
  PRIMARY KEY (id_role),
  id_role VARCHAR(42) NOT NULL,
  role    VARCHAR(42)
);

CREATE TABLE SCORE (
  PRIMARY KEY (id_score),
  id_score  VARCHAR(42) NOT NULL,
  score     VARCHAR(42),
  id_user   VARCHAR(42),
  id_recipe VARCHAR(42)
);

CREATE TABLE USER (
  PRIMARY KEY (id_user),
  id_user      VARCHAR(42) NOT NULL,
  name         VARCHAR(42),
  email        VARCHAR(42),
  password     VARCHAR(42),
  date_created VARCHAR(42),
  status       VARCHAR(42),
  id_role      VARCHAR(42)
);

ALTER TABLE ASSOCIATE ADD FOREIGN KEY (id_recipe) REFERENCES RECIPE (id_recipe);
ALTER TABLE ASSOCIATE ADD FOREIGN KEY (id_category) REFERENCES CATEGORY (id_category);

ALTER TABLE CREATE ADD FOREIGN KEY (id_user) REFERENCES USER (id_user);
ALTER TABLE CREATE ADD FOREIGN KEY (id_recipe) REFERENCES RECIPE (id_recipe);

ALTER TABLE GIVE ADD FOREIGN KEY (id_user) REFERENCES USER (id_user);
ALTER TABLE GIVE ADD FOREIGN KEY (id_score) REFERENCES SCORE (id_score);

ALTER TABLE HAVE ADD FOREIGN KEY (id_user) REFERENCES USER (id_user);
ALTER TABLE HAVE ADD FOREIGN KEY (id_role) REFERENCES ROLE (id_role);

ALTER TABLE LEAVE ADD FOREIGN KEY (id_user) REFERENCES USER (id_user);
ALTER TABLE LEAVE ADD FOREIGN KEY (id_comment) REFERENCES COMMENT (id_comment);
